fix issue with navbar z-index

--- a/src/app/core/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/src/app/core/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -44,6 +44,7 @@
     .navigation-bar {
       @include sticky();
       top: 0;
+      z-index: 100;
     }
   }
 }
